python/testData/inspections/PyCompatibilityInspection/numericLiteralExpression.py
a = <warning descr="Python version 3.0, 3.1 do not support a trailing 'l' or 'L'.">12l</warning>
v = <warning descr="Python version 3.0, 3.1 do not support this syntax. It requires '0o' prefix for octal literals">04</warning><error descr="end of statement expected">8</error>